fix images path online

--- a/homepage/index-template.html
+++ b/homepage/index-template.html
@@ -717,7 +717,7 @@
                     </a>
                     
                     <a href="https://f-droid.org/packages/com.lalumo.app" class="download-btn coming-soon" aria-disabled="true">
-                        <img src="images/fdroid-badge.png" alt="F-Droid" style="height: 20px; margin-right: 6px; vertical-align: middle;" aria-hidden="true">
+                        <img src="/homepage/images/fdroid-badge.png" alt="F-Droid" style="height: 20px; margin-right: 6px; vertical-align: middle;" aria-hidden="true">
                         <span>F-Droid</span>
                         <small lang="en" style="display: block; font-size: 0.8rem; margin-top: 0.2rem;">Coming soon for Android</small>
                         <small lang="de" style="display: block; font-size: 0.8rem; margin-top: 0.2rem;">Bald für Android verfügbar</small>
