verbesserter Text: Handballenerkennung

--- a/homepage/index-template.html
+++ b/homepage/index-template.html
@@ -804,11 +804,11 @@
                     <h3 class="feature-title" lang="de">Kindersicherung & Rücktasten-Sperre</h3>
                     <p class="feature-description" lang="en">
                         Special <strong>child lock mode</strong> on both <strong>iOS</strong> and <strong>Android</strong> prevents accidental exits. 
-                        Our <strong>back-prevention</strong> technology ensures uninterrupted learning sessions.
+                        Our <strong>back-prevention</strong> and <strong>palm rejection</strong> ensure uninterrupted learning sessions.
                     </p>
                     <p class="feature-description" lang="de">
                         Spezielle <strong>Kindersicherung</strong> für <strong>iOS</strong> und <strong>Android</strong> verhindert versehentliches Verlassen. 
-                        Unsere <strong>Rücktasten-Sperre</strong> garantiert unterbrechungsfreie Lernsitzungen.
+                        Unsere <strong>Rücktasten-Sperre</strong> und <strong>Handballenerkennung</strong> garantieren unterbrechungsfreie Lernsitzungen.
                     </p>
                 </div>
                 
