--- a/src/index.html
+++ b/src/index.html
@@ -290,7 +290,7 @@
               x-init="$watch('$store.currentActivityMode', value => isActive = value && value.component === 'chords' && value.mode === '2_2_chords_stable_instable')"
               :class="{ 'active': isActive }"
             >
-              🏞️ <span x-text="$store.strings?.chords_stable_instable || 'Stable Or Instable'"></span>
+              🏞️ <span x-text="$store.strings?.chords_stable_instable || 'Stable or Instable'"></span>
             </button>
             <button id="nav_2_3"
               @click="$dispatch('set-activity-mode', {component: 'chords', mode: '2_3_chords_chord-building'}); window.innerWidth < 1024 ? menuOpen = false : null"
@@ -793,9 +793,12 @@
             <!-- Progress display -->
             <div class="progress-display progress_2_2">
               <p x-text="($store.strings?.correct_answers_count || 'Correct answers: {0}').replace('{0}', progress['2_2_chords_stable_instable'] || 0)"></p>
-              <p x-show="(progress['2_2_chords_stable_instable'] || 0) < 10" x-text="$store.strings?.stable_instable_level1 || 'Can you hear the difference?'"></p>
-              <p x-show="(progress['2_2_chords_stable_instable'] || 0) >= 10 && (progress['2_2_chords_stable_instable'] || 0) < 20" x-text="$store.strings?.stable_instable_level2 || 'Great job! Keep going! 🎵'"></p>
-              <p x-show="(progress['2_2_chords_stable_instable'] || 0) >= 20" x-text="$store.strings?.stable_instable_level3 || 'You\'re a chord expert! 🎼'"></p>
+              <p x-show="(progress['2_2_chords_stable_instable'] || 0) < 10" x-text="$store.strings?.stable_instable_level1 || 'Can you hear the difference between stable and unstable chords?'"></p>
+              <p x-show="(progress['2_2_chords_stable_instable'] || 0) >= 10 && (progress['2_2_chords_stable_instable'] || 0) < 20" x-text="$store.strings?.stable_instable_level2 || 'Great job! Now listening for seventh chords and altered dominants! 🎵'"></p>
+              <p x-show="(progress['2_2_chords_stable_instable'] || 0) >= 20 && (progress['2_2_chords_stable_instable'] || 0) < 30" x-text="$store.strings?.stable_instable_level3 || 'Level 3: Extended harmonies vs. polytonal chords! 🎼'"></p>
+              <p x-show="(progress['2_2_chords_stable_instable'] || 0) >= 30 && (progress['2_2_chords_stable_instable'] || 0) < 40" x-text="$store.strings?.stable_instable_level4 || 'Level 4: Jazz voicings vs. atonal clusters! 🎹'"></p>
+              <p x-show="(progress['2_2_chords_stable_instable'] || 0) >= 40 && (progress['2_2_chords_stable_instable'] || 0) < 50" x-text="$store.strings?.stable_instable_level5 || 'Level 5: Impressionistic harmonies vs. microtonal variations! 🎶'"></p>
+              <p x-show="(progress['2_2_chords_stable_instable'] || 0) >= 50" x-text="$store.strings?.stable_instable_level6 || 'Master Level: Complex extended harmonies and sophisticated dissonances! 🏆'"></p>
             </div>
             
             <div class="button_2_2_grid">
