1_1: german feedback verbessert.  Fix Alpine.js feedback variable initiation global

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="./favicon.ico" sizes="any" />
   <link rel="apple-touch-icon" href="./icons/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="192x192" href="./icons/icon-192.png" />
-  <link rel="icon" type="image/png" sizes="512x512" href="./app/images/logo_bird_sings.jpg" />
+  <link rel="icon" type="image/png" sizes="512x512" href="./images/logo_bird_sings.jpg" />
   <!-- Native App Detector - Setzt das window.isNativeApp Flag für zuverlässige App-Erkennung -->
   <script>
     // In der nativen App wird capacitorJs geladen
@@ -784,7 +784,7 @@
         </div>
         
         <!-- 2_2 Chords - Stable Or Instable Activity -->
-        <div id="2_2_chords_stable_instable" x-show="mode === '2_2_chords_stable_instable'" class="chord-activity activity-container lazyload-bg" data-background-image="./images/backgrounds/2_2_chords_stable_instable.png">
+        <div id="2_2_chords_stable_instable" x-show="mode === '2_2_chords_stable_instable'" class="chord-activity activity-container lazyload-bg" data-background-image="./images/backgrounds/2_2_chords_stable_instable-1.jpg">
           
           <!-- Play button (shown in game mode) -->
           <button @click="playStableInstableChord($data, false)" class="play-chord-2_2" :title="$store.strings?.play_chord || 'Play Chord'">▶️</button>
