Imprecise inputs like swipes or accidental palm touches are detected and reliably processed - perfect for little fingers - uninterrupted learning sessions.

--- a/homepage/index-template.html
+++ b/homepage/index-template.html
@@ -803,12 +803,12 @@
                     <h3 class="feature-title" lang="en">Child Lock & Back-Prevention</h3>
                     <h3 class="feature-title" lang="de">Kindersicherung & Rücktasten-Sperre</h3>
                     <p class="feature-description" lang="en">
-                        Special <strong>child lock mode</strong> on both <strong>iOS</strong> and <strong>Android</strong> prevents accidental exits. 
-                        Our <strong>back-prevention</strong> and <strong>palm rejection</strong> ensure uninterrupted learning sessions.
+                        The integrated child safety and back button protection prevent accidental app exits.
+                        Imprecise inputs like swipes or accidental palm touches are detected and reliably processed - perfect for little fingers - uninterrupted learning sessions.
                     </p>
                     <p class="feature-description" lang="de">
-                        Spezielle <strong>Kindersicherung</strong> für <strong>iOS</strong> und <strong>Android</strong> verhindert versehentliches Verlassen. 
-                        Unsere <strong>Rücktasten-Sperre</strong> und <strong>Handballenerkennung</strong> garantieren unterbrechungsfreie Lernsitzungen.
+                        Eine integrierte Kindersicherung und Rück-Button-Sperre verhindern ein unbeabsichtigtes Verlassen der App.
+                        Auch ungenaue Eingaben wie Wischbewegungen oder versehentliche Berührungen mit dem Handballen werden erkannt und zuverlässig verarbeitet – ideal für kleine Finger - unterbrechungsfreie Lernsitzungen.
                     </p>
                 </div>
                 
