2_2: update button IDs and styling for chord stability exercise replay functionality

--- a/src/index.html
+++ b/src/index.html
@@ -783,7 +783,7 @@
             
             <!-- Replay button (shown in game mode) -->
             <button id="replay-button-2_2"
-                    class="play-button_2_2" 
+                    class="replay-button_2_2" 
                     :title="$store.strings?.replay_chord || 'Replay Chord'"
                     style="display: none;">
               🔄
