fix colors for navi highlight and homepage footer links

--- a/homepage/index-template.html
+++ b/homepage/index-template.html
@@ -423,7 +423,7 @@
         }
 
         /* Footer */
-        .footer {
+        .footer, .footer a {
             background: var(--text-dark);
             color: white;
             padding: 3rem 2rem 2rem;
