--- a/src/index.html
+++ b/src/index.html
@@ -97,6 +97,13 @@
   
 </head>
 <body class="loading">
+  <!-- Portrait Mode Notice -->
+  <div class="portrait-notice">
+    <h2>📱 Bitte drehe dein Gerät</h2>
+    <p>Lalumo funktioniert am besten im Hochformat.</p>
+    <p>Please rotate your device to portrait mode.</p>
+  </div>
+  
   <!-- Loading spinner overlay -->
   <div id="loading-overlay">
     <img id="loading-logo" src="./icons/icon-512.png" alt="Lalumo Logo">
